[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-info"
version = "0.0.2"
description = "A Python package for STAC info"
long_description = file: README.md
long_description_content_type = text/markdown
dependencies = [
    'requests',
]

[metadata]
license = "MIT"
license_file = "LICENSE"
readme = "README.md"
readme_content_type = "text/markdown"