[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stac-info"
authors = [
    { name = "Joseph Thuha", email = "josephthuha@gmail.com" },
]
version = "0.0.2"
description = "A Python package for STAC info"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    'requests',
]

[metadata]
license = "MIT"
license_file = "LICENSE"
readme = "README.md"
readme_content_type = "text/markdown"